--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,17 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 SQLAlchemy==2.0.37
-typing_extensions==4.12.2
+typing_extensions==4.15.0
 Werkzeug==3.1.3
 WTForms==3.2.1
 gunicorn==23.0.0
 psycopg2-binary==2.9.11
 email-validator==2.3.0
+python-dotenv==1.2.1
+
+# Testing dependencies (NEW)
+pytest==7.4.3
+pytest-flask==1.3.0
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+faker==22.0.0
