--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,8 @@ pytest-flask==1.3.0
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 faker==22.0.0
+
+# Code quality tools
+flake8==7.0.0
+black==24.2.0
+coverage==7.4.1
