Update production configuration and add database initialization scripts
- Change Docker image reference in docker-compose.prod.yml
- Add entrypoint.sh for application startup and database initialization
- Introduce init_db.py for creating database tables with retry logic

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,7 +22,7 @@ services:
       retries: 5
 
   web:
-    image: ghcr.io/${GITHUB_REPOSITORY_OWNER:-yourusername}/flask-blog:latest
+    image: ghcr.io/ronen-benjacob/flask-blog:latest
     container_name: flask_blog_app_prod
     restart: always
     ports:
